feature(quizup-profile): add production profile